--- a/src/data_clean.ipynb
+++ b/src/data_clean.ipynb
@@ -289,7 +289,7 @@
     "nps_parks_df = pd.read_csv(nps_parks_csv)\n",
     "\n",
     "# National Park Data: Parks Species \n",
-    "# WARNING WILL THROW A WARNING BECAUSE OF EXTRA COMMA AT EOL\n",
+    "# WARNING WILL THROW A WARNING BECAUSE OF EXTRA COMMA AT  EVERY EOL\n",
     "nps_species_csv = \"../data/nps/species.csv\"\n",
     "nps_species_df = pd.read_csv(nps_species_csv)\n",
     "\n",
