code adjustment for viewing

--- a/src/data_clean.ipynb
+++ b/src/data_clean.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 336,
    "metadata": {
     "scrolled": true
    },
@@ -177,7 +177,7 @@
        "4   34.0787  -118.2844  "
       ]
      },
-     "execution_count": 329,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "22  -118.3032  "
       ]
      },
-     "execution_count": 330,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "71730  Total Homeless  43854  "
       ]
      },
-     "execution_count": 317,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,14 +632,15 @@
     "\n",
     "# Grabbing Total Homeless Count for range 2012-2016 for plotting.  Removed commas from count data.\n",
     "\n",
-    "homeless_counts = homeless_data_df.loc[((homeless_data_df['Measures'] == \"Total Homeless\") & (homeless_data_df['CoC Name'] == \"Los Angeles City & County CoC\") & (homeless_data_df['State'] == 'CA')) & ((homeless_data_df['Year'] == \"1/1/2012\") | (homeless_data_df['Year'] == \"1/1/2013\") | (homeless_data_df['Year'] == \"1/1/2014\") | (homeless_data_df['Year'] == \"1/1/2015\") | (homeless_data_df['Year'] == \"1/1/2016\"))]\n",
+    "homeless_counts = homeless_data_df.loc[((homeless_data_df['Measures'] == \"Total Homeless\") &\n",
+    "                                        (homeless_data_df['CoC Name'] == \"Los Angeles City & County CoC\") & (homeless_data_df['State'] == 'CA')) & ((homeless_data_df['Year'] == \"1/1/2012\") | (homeless_data_df['Year'] == \"1/1/2013\") | (homeless_data_df['Year'] == \"1/1/2014\") | (homeless_data_df['Year'] == \"1/1/2015\") | (homeless_data_df['Year'] == \"1/1/2016\"))]\n",
     "homeless_counts_fixed = homeless_counts.replace(',','',regex=True)\n",
     "homeless_counts_fixed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
