--- a/src/data_analysis.ipynb
+++ b/src/data_analysis.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "crimes_per_year = du.clean_crime_data_df.groupby('Year of Crime')['Crime Description'].count()\n",
     "crime_counts_per_year = crimes_per_year.to_list()\n",
-    "homeless_counts_fixed = du.homeless_count()\n",
+    "homeless_counts_fixed = du.homeless_counts()\n",
     "\n",
     "# Width of bars set for cleaner plot presentation, created a list of the length of crime count list (number of years)\n",
     "# to be set as the x_axis for the crime count data.  Calculation made to place second set of x-axis locations for homeless\n",
@@ -200,13 +200,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
