--- a/src/data_clean.ipynb
+++ b/src/data_clean.ipynb
@@ -75,6 +75,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Grab the counts of homeless over the data period of 2012 to 2016\n",
+    "du.homeless_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
