--- a/src/data_analysis.ipynb
+++ b/src/data_analysis.ipynb
@@ -20,6 +20,7 @@
     "import sklearn.datasets as dta\n",
     "import scipy.stats as st\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.ticker as mtick\n",
     "import datautil as du"
    ]
   },
@@ -206,6 +207,106 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Histogram of the number of crimes over the day for the time period of 2012-2016\n",
+    "plt.hist(du.clean_crime_data_df['Time Occurred'], bins=24)\n",
+    "plt.title('Histogram of Crimes During Time Blocks of the day in LA County Between 2012 and 2016')\n",
+    "plt.ylabel('Number of Crimes')\n",
+    "plt.xlabel('Time Block (1 hour)')\n",
+    "\n",
+    "# Setting output location and name for png of plot.\n",
+    "output_image = f'../output/Crime_Hist_Hourly_2012_2016.png'\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(output_image)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histogram of the number of crimes over the day for the time period of 2012-2016\n",
+    "plt.hist(du.clean_crime_data_df.loc[du.clean_crime_data_df['Crime Description'] == 'ADW']['Time Occurred'], bins=24)\n",
+    "plt.title('Histogram of ADW Crimes During Time Blocks of the day in LA County Between 2012 and 2016')\n",
+    "plt.ylabel('Number of Crimes')\n",
+    "plt.xlabel('Time Block (1 hour)')\n",
+    "\n",
+    "# Setting output location and name for png of plot.\n",
+    "output_image = f'../output/Crime_Hist_ADW_2012_2016.png'\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(output_image)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histogram of the number of crimes over the day for the time period of 2012-2016\n",
+    "plt.hist(du.clean_crime_data_df.loc[du.clean_crime_data_df['Crime Description'] == 'Theft']['Time Occurred'], bins=24)\n",
+    "plt.title('Histogram of Theft Crimes During Time Blocks of the day in LA County Between 2012 and 2016')\n",
+    "plt.ylabel('Number of Crimes')\n",
+    "plt.xlabel('Time Block (1 hour)')\n",
+    "\n",
+    "# Setting output location and name for png of plot.\n",
+    "output_image = f'../output/Crime_Hist_Theft_2012_2016.png'\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(output_image)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histogram of the number of crimes over the day for the time period of 2012-2016\n",
+    "plt.hist(du.clean_crime_data_df.loc[du.clean_crime_data_df['Crime Description'] == 'Battery']['Time Occurred'], bins=24)\n",
+    "plt.title('Histogram of Battery Crimes During Time Blocks of the day in LA County Between 2012 and 2016')\n",
+    "plt.ylabel('Number of Crimes')\n",
+    "plt.xlabel('Time Block (1 hour)')\n",
+    "\n",
+    "# Setting output location and name for png of plot.\n",
+    "output_image = f'../output/Crime_Hist_Battery_2012_2016.png'\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(output_image)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histogram of the number of crimes over the day for the time period of 2012-2016\n",
+    "plt.hist(du.clean_crime_data_df.loc[du.clean_crime_data_df['Crime Description'] == 'Vandalism']['Time Occurred'], bins=24)\n",
+    "plt.title('Histogram of Vandalism Crimes During Time Blocks of the day in LA County Between 2012 and 2016')\n",
+    "plt.ylabel('Number of Crimes')\n",
+    "plt.xlabel('Time Block (1 hour)')\n",
+    "\n",
+    "# Setting output location and name for png of plot.\n",
+    "output_image = f'../output/Crime_Hist_Vandalism_2012_2016.png'\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(output_image)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -225,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
