Last commit before branching

--- a/src/data_analysis.ipynb
+++ b/src/data_analysis.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import sklearn.datasets as dta\n",
+    "# import sklearn.datasets as dta\n",
     "import scipy.stats as st\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as mtick\n",
@@ -26,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOADING DATA FILES ../data/crime/2012_2016_CrimeRate.csv and ../data/crime/2007-2016-Homelessness-USA.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Load and clean data\n",
     "du.clean_data()"
