Adding crime heatmap for various crime description

--- a/src/data_analysis.ipynb
+++ b/src/data_analysis.ipynb
@@ -10,10 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib notebook\n",
+    "\n",
     "# Import Dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -21,25 +23,82 @@
     "import scipy.stats as st\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as mtick\n",
-    "import datautil as du"
+    "import datautil as du\n",
+    "import gmaps\n",
+    "\n",
+    "# Have an api_keys.py in your local folder, an define g_key as the google-maps API key\n",
+    "from api_keys import g_key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LOADING DATA FILES ../data/crime/2012_2016_CrimeRate.csv and ../data/crime/2007-2016-Homelessness-USA.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load and clean data\n",
     "du.clean_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Crime distribution over the city LA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure gmaps with the api key\n",
+    "gmaps.configure(api_key=g_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Collect the weights per lat-long for chosen crime descriptions\n",
+    "crime_desc_select = [\"VEHICLE - STOLEN\", \"THEFT\", \"ASSAULT WITH DEADLY WEAPON\"]\n",
+    "lat_lng_df_ar = []\n",
+    "# Collect crime desc data\n",
+    "for lix in range(len(crime_desc_select)):\n",
+    "    crime_desc = crime_desc_select[lix]\n",
+    "    lat_lng_df = du.collect_lat_lng(crime_desc)\n",
+    "    lat_lng_df_ar.append(lat_lng_df)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Draw the crime distribiton per location\n",
+    "fig = gmaps.figure(center=(34.02,-118.25), zoom_level=11)\n",
+    "\n",
+    "colors = [(0,0,255,1), (0,255,0,1), (255,0,0,1)]\n",
+    "weight_factor = [1.3,1.2,1.4]\n",
+    "\n",
+    "for lix in range(len(crime_desc_select)):\n",
+    "    color = colors[lix]\n",
+    "    lat_lng_df = lat_lng_df_ar[lix]\n",
+    "\n",
+    "    heatmap_layer = gmaps.WeightedHeatmap(locations=lat_lng_df[[\"Latitude\", \"Longitude\"]],\n",
+    "                                          weights=(lat_lng_df[\"Weights\"].values)**weight_factor[lix],\n",
+    "                                          point_radius=25, dissipating=True,\n",
+    "                                          max_intensity = 1,\n",
+    "                                          gradient=[(255,255,255,0.7/3),\n",
+    "                                                      (255,255,255,1/3),\n",
+    "                                                       color])\n",
+    "    fig.add_layer(heatmap_layer)\n",
+    "fig"
    ]
   },
   {
