--- a/src/data_analysis_tolga.ipynb
+++ b/src/data_analysis_tolga.ipynb
@@ -28,7 +28,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "apply() missing 1 required positional argument: 'func'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-298295eb3c26>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Read data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mall_crime_data_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../data/crime/2012_2016_CrimeRate.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mall_crime_data_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: apply() missing 1 required positional argument: 'func'"
+     ]
+    }
+   ],
+   "source": [
+    "# Read data\n",
+    "all_crime_data_df = pd.read_csv(\"../data/crime/2012_2016_CrimeRate.csv\")\n",
+    "all_crime_data_df.apply()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_crime_data = all_crime_data_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +278,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>881514 rows × 13 columns</p>\n",
+       "<p>877351 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -289,19 +321,15 @@
        "881512   Invest Cont   34.2010  -118.5623  \n",
        "881513   Invest Cont   34.0690  -118.3154  \n",
        "\n",
-       "[881514 rows x 13 columns]"
+       "[877351 rows x 13 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Read data\n",
-    "all_crime_data_df = pd.read_csv(\"../data/crime/2012_2016_CrimeRate.csv\")\n",
-    "all_crime_data_df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
