--- a/src/data_analysis_tolga.ipynb
+++ b/src/data_analysis_tolga.ipynb
@@ -386,7 +386,7 @@
    "source": [
     "all_crime_data_df[\"Late.By.Year\"] = all_crime_data_df[\"Date.Rptd.year\"] > all_crime_data_df[\"DATE.OCC.year\"]\n",
     "all_crime_data_df[\"Late.By.Datetime\"] = all_crime_data_df[\"Date.Rptd.datetime\"] - all_crime_data_df[\"DATE.OCC.datetime\"]\n",
-    "all_crime_data_df"
+    "all_crime_data_df[]"
    ]
   },
   {
@@ -395,7 +395,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year"
+    "#data_util########\n",
+    "\n",
+    "    # put into a list to make a new column for grouping.\n",
+    "    year_occurred = []\n",
+    "    month_occurred = []\n",
+    "    day_occurred = []\n",
+    "\n",
+    "    for crime in clean_crime_data_df['Date Occurred']:\n",
+    "        year = crime.year\n",
+    "        month = crime.month\n",
+    "        day = crime.day\n",
+    "        \n",
+    "        year_occurred.append(year)\n",
+    "        month_occurred.append(month)\n",
+    "        day_occurred.append(day)\n",
+    "        \n",
+    "    clean_crime_data_df['Year of Crime'] = year_occurred\n",
+    "    clean_crime_data_df['Month of Crime'] = month_occurred\n",
+    "    clean_crime_data_df['Day of Crime'] = day_occurred\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'du' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-b9ed8c3538ed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0munique_crime_desc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdu\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclean_crime_data_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Crime Description\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mbarWidth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.35\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'du' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import holidays\n",
+    "import datetime\n",
+    "\n",
+    "unique_crime_desc = du.clean_crime_data_df[\"Crime Description\"].unique()\n",
+    "barWidth = 0.35\n",
+    "\n",
+    "r1 = np.arange(len(unique_years))\n",
+    "r2 = [x + barWidth for x in r1]\n",
+    "\n",
+    "# Plotting both bars using the set x-axes and y-axes to make a mutli-bar plot to see\n",
+    "# potential correlation between crimes and homelessness.\n",
+    "\n",
+    "fig, axes2d = plt.subplots(2,2, figsize=(6,6))\n",
+    "axes = axes2d.flatten()\n",
+    "\n",
+    "for cix in range(len(unique_crime_desc)):\n",
+    "    crime_desc = unique_crime_desc[cix]\n",
+    "    unique_years = du.clean_crime_data_df[\"Year of Crime\"].unique()\n",
+    "    # Calculate the number of crimes per each year that happened in holidays\n",
+    "    holi_per_year = np.zeros_like(unique_years)\n",
+    "    nonholi_per_year = np.zeros_like(unique_years)\n",
+    "    days_per_year = np.zeros_like(unique_years)\n",
+    "    crimes_on_holi_per_year = np.zeros_like(unique_years)\n",
+    "    crimes_on_nonholi_per_year = np.zeros_like(unique_years)\n",
+    "    \n",
+    "\n",
+    "    for yix in range(len(unique_years)):\n",
+    "        year = unique_years[yix]\n",
+    "        holi_per_year[yix] = len(holidays.US(years=[year], state=\"CA\"))\n",
+    "        days_per_year[yix] = (datetime.date(year+1,1,1) - datetime.date(year,1,1)).days\n",
+    "        nonholi_per_year[yix] = days_per_year[yix] - holi_per_year[yix]\n",
+    "\n",
+    "        # Choose the df that contains the years\n",
+    "        filter_year = np.bitwise_and(du.clean_crime_data_df[\"Year of Crime\"] == year, \n",
+    "                                     du.clean_crime_data_df[\"Crime Description\"] == crime_desc)\n",
+    "\n",
+    "        # Calculate crimes per holiday on each year\n",
+    "        crimes_on_holi_per_year[yix] = du.clean_crime_data_df[filter_year][\"Holiday\"].sum()/holi_per_year[yix]\n",
+    "        crimes_on_nonholi_per_year[yix] = (du.clean_crime_data_df[filter_year][\"Holiday\"] == False).sum()/nonholi_per_year[yix]\n",
+    "        \n",
+    "    ax = axes[cix]\n",
+    "    ax.bar(r1, crimes_on_nonholi_per_year, color = 'blue', alpha = 0.75, width = barWidth, edgecolor = 'white', label = 'non-holidays')\n",
+    "    ax.bar(r2, crimes_on_holi_per_year, color = 'red', alpha = 0.75, width = barWidth, edgecolor = 'white', label = 'holidays')\n",
+    "\n",
+    "    # Created a title, legend and axes labels for multi-bar plot.  Labeled the x tickmarks as the years and\n",
+    "    # set their location in between the two bars for each year.\n",
+    "\n",
+    "#     ax.set_title(f'{crime_desc}')\n",
+    "    ax.set_xlabel('Year')\n",
+    "    ax.set_ylabel(f'{crime_desc} per day')\n",
+    "    ax.set_xticks([r + (barWidth/2) for r in range(len(unique_years))])\n",
+    "    ax.set_xticklabels(unique_years)\n",
+    "    ax.legend(loc='upper right', title='Count Type', frameon = False)"
    ]
   },
   {
