--- a/src/data_analysis.ipynb
+++ b/src/data_analysis.ipynb
@@ -64,12 +64,12 @@
    "outputs": [],
    "source": [
     "# Collect the weights per lat-long for chosen crime descriptions\n",
-    "crime_desc_select = [\"VEHICLE - STOLEN\", \"THEFT\", \"ASSAULT WITH DEADLY WEAPON\"]\n",
+    "crime_desc_select = [\"Vandalism\", \"Theft\", \"ADW\", \"Battery\"]\n",
     "lat_lng_df_ar = []\n",
     "# Collect crime desc data\n",
     "for lix in range(len(crime_desc_select)):\n",
     "    crime_desc = crime_desc_select[lix]\n",
-    "    lat_lng_df = du.collect_lat_lng(crime_desc)\n",
+    "    lat_lng_df = du.collect_lat_lng_dist(crime_desc)\n",
     "    lat_lng_df_ar.append(lat_lng_df)\n",
     "    "
    ]
@@ -83,8 +83,8 @@
     "# Draw the crime distribiton per location\n",
     "fig = gmaps.figure(center=(34.02,-118.25), zoom_level=11)\n",
     "\n",
-    "colors = [(0,0,255,1), (0,255,0,1), (255,0,0,1)]\n",
-    "weight_factor = [1.3,1.2,1.4]\n",
+    "colors = [(0,255,0,1), (0,0,255,1), (255,0,0,1), (0,190,190,1)]\n",
+    "weight_factor = [1.2,1.3,1.3,1.5]\n",
     "\n",
     "for lix in range(len(crime_desc_select)):\n",
     "    color = colors[lix]\n",
@@ -94,8 +94,8 @@
     "                                          weights=(lat_lng_df[\"Weights\"].values)**weight_factor[lix],\n",
     "                                          point_radius=25, dissipating=True,\n",
     "                                          max_intensity = 1,\n",
-    "                                          gradient=[(255,255,255,0.7/3),\n",
-    "                                                      (255,255,255,1/3),\n",
+    "                                          gradient=[(255,255,255,0.7/4),\n",
+    "                                                      (255,255,255,1/4),\n",
     "                                                       color])\n",
     "    fig.add_layer(heatmap_layer)\n",
     "fig"
