--- a/src/data_analysis.ipynb
+++ b/src/data_analysis.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
     "\n",
     "# Import Dependencies\n",
     "import pandas as pd\n",
@@ -30,7 +30,6 @@
     "\n",
     "# Have an api_keys.py in your local folder, an define g_key as the google-maps API key\n",
     "from api_keys import g_key"
-
    ]
   },
   {
@@ -47,8 +46,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Crime distribution over LA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure gmaps with the api key\n",
+    "gmaps.configure(api_key=g_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Collect the weights per lat-long for chosen crime descriptions\n",
+    "crime_desc_select = [\"Vandalism\", \"Theft\", \"ADW\", \"Battery\"]\n",
+    "lat_lng_df_ar = []\n",
+    "# Collect crime desc data\n",
+    "for lix in range(len(crime_desc_select)):\n",
+    "    crime_desc = crime_desc_select[lix]\n",
+    "    lat_lng_df = du.collect_lat_lng_dist(crime_desc)\n",
+    "    lat_lng_df_ar.append(lat_lng_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Draw the crime distribiton per location\n",
+    "fig = gmaps.figure(center=(34.02,-118.25), zoom_level=11)\n",
+    "\n",
+    "colors = [(0,255,0,1), (0,0,255,1), (255,0,0,1), (0,190,190,1)]\n",
+    "weight_factor = [1.2,1.3,1.3,1.5]\n",
+    "\n",
+    "for lix in range(len(crime_desc_select)):\n",
+    "    color = colors[lix]\n",
+    "    lat_lng_df = lat_lng_df_ar[lix]\n",
+    "\n",
+    "    heatmap_layer = gmaps.WeightedHeatmap(locations=lat_lng_df[[\"Latitude\", \"Longitude\"]],\n",
+    "                                          weights=(lat_lng_df[\"Weights\"].values)**weight_factor[lix],\n",
+    "                                          point_radius=25, dissipating=True,\n",
+    "                                          max_intensity = 1,\n",
+    "                                          gradient=[(255,255,255,0.7/4),\n",
+    "                                                      (255,255,255,1/4),\n",
+    "                                                       color])\n",
+    "    fig.add_layer(heatmap_layer)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Crimes on holidays"
-
    ]
   },
   {
@@ -437,6 +495,13 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
