Updated all images

--- a/src/data_analysis.ipynb
+++ b/src/data_analysis.ipynb
@@ -66,6 +66,7 @@
    "outputs": [],
    "source": [
     "# Collect the weights per lat-long for chosen crime descriptions\n",
+    "# THIS WILL TAKE A BIT OF TIME!\n",
     "crime_desc_select = [\"Vandalism\", \"Theft\", \"ADW\", \"Battery\"]\n",
     "lat_lng_df_ar = []\n",
     "# Collect crime desc data\n",
@@ -494,6 +495,78 @@
     "plt.savefig(output_image)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hours_of_day = np.linspace(0,2300,24,dtype=np.int16).tolist()\n",
+    "\n",
+    "data_2012 = du.clean_crime_data_df[\"Time Block Occurred\"].loc[du.clean_crime_data_df['Year of Crime'] == 2012].groupby(du.clean_crime_data_df[\"Time Block Occurred\"]).count()\n",
+    "data_2013 = du.clean_crime_data_df[\"Time Block Occurred\"].loc[du.clean_crime_data_df['Year of Crime'] == 2013].groupby(du.clean_crime_data_df[\"Time Block Occurred\"]).count()\n",
+    "data_2014 = du.clean_crime_data_df[\"Time Block Occurred\"].loc[du.clean_crime_data_df['Year of Crime'] == 2014].groupby(du.clean_crime_data_df[\"Time Block Occurred\"]).count()\n",
+    "data_2015 = du.clean_crime_data_df[\"Time Block Occurred\"].loc[du.clean_crime_data_df['Year of Crime'] == 2015].groupby(du.clean_crime_data_df[\"Time Block Occurred\"]).count()\n",
+    "data_2016 = du.clean_crime_data_df[\"Time Block Occurred\"].loc[du.clean_crime_data_df['Year of Crime'] == 2016].groupby(du.clean_crime_data_df[\"Time Block Occurred\"]).count()\n",
+    "\n",
+    "\n",
+    "\n",
+    "plot_data = pd.DataFrame({\n",
+    "    \"2012\":data_2012.tolist(),\n",
+    "    \"2013\":data_2013.tolist(),\n",
+    "    \"2014\":data_2014.tolist(),\n",
+    "    \"2015\":data_2015.tolist(),\n",
+    "    \"2016\":data_2016.tolist()\n",
+    "    }, \n",
+    "    index=hours_of_day\n",
+    ")\n",
+    "\n",
+    "stacked_data = plot_data.apply(lambda x: x*100/sum(x), axis=1)\n",
+    "\n",
+    "stacked_data.plot(kind='bar', stacked=True)\n",
+    "plt.legend(loc='center left', bbox_to_anchor=(1.0, 0.5))\n",
+    "plt.title(\"Time of day of crime per year (by %)\")\n",
+    "plt.xlabel(\"Time of Day\")\n",
+    "plt.ylabel(\"Number of Crimes Commited\")\n",
+    "output_image = f'../output/time_of_day_percent_2012_2016.png'\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.savefig(output_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_adw = du.clean_crime_data_df[\"Time Block Occurred\"].loc[du.clean_crime_data_df['Crime Description'] == 'ADW'].groupby(du.clean_crime_data_df[\"Time Block Occurred\"]).count()\n",
+    "data_vandalism = du.clean_crime_data_df[\"Time Block Occurred\"].loc[du.clean_crime_data_df['Crime Description'] == 'Vandalism'].groupby(du.clean_crime_data_df[\"Time Block Occurred\"]).count()\n",
+    "data_battery = du.clean_crime_data_df[\"Time Block Occurred\"].loc[du.clean_crime_data_df['Crime Description'] == 'Battery'].groupby(du.clean_crime_data_df[\"Time Block Occurred\"]).count()\n",
+    "data_theft = du.clean_crime_data_df[\"Time Block Occurred\"].loc[du.clean_crime_data_df['Crime Description'] == 'Theft'].groupby(du.clean_crime_data_df[\"Time Block Occurred\"]).count()\n",
+    "\n",
+    "plot_data = pd.DataFrame({\n",
+    "    \"ADW\":data_adw.tolist(),\n",
+    "    \"Battery\":data_battery.tolist(),\n",
+    "    \"Vandalism\":data_vandalism.tolist(),\n",
+    "    \"Theft\":data_theft.tolist()\n",
+    "    }, \n",
+    "    index=hours_of_day\n",
+    ")\n",
+    "\n",
+    "stacked_data = plot_data.apply(lambda x: x*100/sum(x), axis=1)\n",
+    "\n",
+    "stacked_data.plot(kind='bar', stacked=True)\n",
+    "plt.legend(loc='center left', bbox_to_anchor=(1.0, 0.5))\n",
+    "plt.title(\"Time of day by crime (by %)\")\n",
+    "plt.xlabel(\"Time of Day\")\n",
+    "plt.ylabel(\"Percent of Crimes Commited\")\n",
+    "output_image = f'../output/time_of_day_percent_crimes.png'\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.savefig(output_image, transparent=False)"
    ]
   },
   {
